# funformatted

./: LICENSE  Main.hs  README.md  funformatted.cabal
Data/Fortran/: Unformatted.hs
Data/Fortran/Unformatted/: Parser.hs  Unsafe.hs
tests/: Main.hs  TestUnformatted.hs  bad.unf  good.unf
