name:                funformatted
version:             0.1.0.0
synopsis:            Reads and writes Fortran unformatted files
-- description:         
homepage:            http://github/albertov/funformatted
license:             MIT
license-file:        LICENSE
author:              Alberto Valverde
maintainer:          alberto@toscat.net
copyright:           2014 Alberto Valverde
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:   Data.Fortran.Unformatted
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base >=4.7 && <4.8
                   , bytestring
                    
  -- hs-source-dirs:      
  default-language:  Haskell2010

test-suite main
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , hspec
                   , funformatted
                   , bytestring
  hs-source-dirs:  tests
  main-is:         Main.hs
