name:                funformatted
version:             0.1.0.1
synopsis:            Reads and writes Fortran unformatted files
description:         Reads and writes Fortran unformatted files
homepage:            http://github/albertov/funformatted
license:             MIT
license-file:        LICENSE
author:              Alberto Valverde
maintainer:          alberto@toscat.net
copyright:           2014 Alberto Valverde
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/albertov/funformatted

library
  exposed-modules:   Data.Fortran.Unformatted
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base >=4.6 && <5
                   , bytestring
                   , pipes
                   , pipes-bytestring >= 2.0.0
                    
  -- hs-source-dirs:      
  default-language:  Haskell2010
  ghc-options:       -Wall

test-suite main
  type:              exitcode-stdio-1.0
  build-depends:     base
                   , hspec
                   , funformatted
                   , bytestring
                   , pipes-bytestring
  hs-source-dirs:    tests
  main-is:           Main.hs
  default-language:  Haskell2010
  ghc-options:       -Wall
